--- a/bedrock/mozorg/templates/mozorg/mission.html
+++ b/bedrock/mozorg/templates/mozorg/mission.html
@@ -69,11 +69,11 @@
       <p>{{ _('Where we come from and how we got to where we are') }}</p>
     </li>
     <li>
-      <h4><a href="/about/forums/">{{ _('Forums') }}</a></h4>
+      <h4><a href="{{ url('mozorg.about.forums.forums') }}">{{ _('Forums') }}</a></h4>
       <p>{{ _('Topics include support, products, and technologies') }}</p>
     </li>
     <li>
-      <h4><a href="/about/governance.html">{{ _('Governance') }}</a></h4>
+      <h4><a href="{{ url('mozorg.about.governance.governance') }}">{{ _('Governance') }}</a></h4>
       <p>{{ _('Our structure, organization, and the broader Mozilla community') }}</p>
     </li>
   </ul>
