--- a/media/css/styleguide/styleguide.less
+++ b/media/css/styleguide/styleguide.less
@@ -254,6 +254,7 @@ body.dark {
         color: #eee;
         text-shadow: 0 1px #333;
     }
+    #masthead a,
     a {
         &:link {
             color: #00C7EF;
