--- a/bedrock/base/templates/base-resp.html
+++ b/bedrock/base/templates/base-resp.html
@@ -103,10 +103,18 @@
           <nav id="nav-main" role="navigation">
             <span class="toggle" role="button" aria-controls="nav-main-menu" aria-expanded="false" tabindex="0">{{_('Menu')}}</span>
             <ul id="nav-main-menu">
-              <li class="first mission-item"><a href="{{ url('mozorg.mission') }}">{{_('Mission')}}</a></li>
-              <li class="about-item"><a href="{{ url('mozorg.about') }}">{{_('About')}}</a></li>
-              <li class="products-item"><a href="{{ url('firefox.family.index') }}">{{_('Products')}}</a></li>
-              <li class="last contribute-item"><a href="{{ url('mozorg.contribute') }}">{{_('Get Involved')}}</a></li>
+              <li class="first about-item">
+                <a data-link-type="about" data-element-location="nav click" href="{{ url('mozorg.about') }}">{{_('About')}}</a>
+              </li>
+              <li class="contribute-item">
+                <a data-link-type="participate" data-element-location="nav click" href="{{ url('mozorg.contribute') }}">{{_('Participate')}}</a>
+              </li>
+              <li class="products-item">
+                <a data-link-type="firefox" data-element-location="nav click" href="{{ url('firefox.family.index') }}">{{_('Firefox')}}</a>
+              </li>
+              <li class="last donate-item">
+                <a data-link-type="donate" data-element-location="nav click" href="{{ donate_url('mozillaorg_topNAV') }}">{{_('Donate')}}</a>
+              </li>
             </ul>
           </nav>
         {% endblock %}
