--- a/bedrock/press/templates/press/speaker-request.html
+++ b/bedrock/press/templates/press/speaker-request.html
@@ -4,7 +4,7 @@
 {% block body_id %}press_speaker_request{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'press_speaker_request' %}
 {% endblock %}
 
