--- a/media/css/firefox/desktop/tips.less
+++ b/media/css/firefox/desktop/tips.less
@@ -3,7 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import '../../sandstone/lib.less';
-@import '../menu-resp.less';
+@import '../../base/menu-resp.less';
 
 /* {{{ Template overrides */
 
