Fix Bug 1205858, adds new default contact us tab to contact page

--- a/bedrock/base/templates/includes/site-footer.html
+++ b/bedrock/base/templates/includes/site-footer.html
@@ -12,7 +12,7 @@
           </div>
           <div class="col col-2">
             <ul class="links-join">
-              <li><a href="{{ url('mozorg.contact.spaces.spaces-landing') }}">{{ _('Contact Us') }}</a></li>
+              <li><a href="{{ url('mozorg.contact.contact-landing') }}">{{ _('Contact Us') }}</a></li>
               <li class="wrap"><a href="{{ url('mozorg.partnerships') }}">{{ _('Partner with Us' ) }}</a></li>
               <li class="clear"><a href="{{ donate_url('mozillaorg_footer') }}" class="donate">{{ _('Donate') }}</a></li>
               <li class="wrap"><a href="{{ url('mozorg.contribute.friends') }}">{{ _('Firefox Friends') }}</a></li>
