Bug 1197244 - Newsletters Control Center:  use a separate .lang file for all the newsletter stuff * newsletter.lang is no longer loaded as a default langfile for all templates (because only 8 locales do the newsletters and default files are assigned to all locales) * all newsletter templates and newsletter python files except the hacks blog get their strings extracted to mozorg/newsletters.lang * newsletter/views.py was loading strings from the contribute page, now they are also loaded from mozorg/newsletters.lang * mozorg/forms.py now also loads strings from mozorg/newsletter.lang * One string was corrected in a template (2 spaces instead of 1) * tests and documentation updated
The mozorg/newsletters.lang file already has all the string copied from newsletter.lang and the file is on production on svn for the 8 locales that translate newsletters.

Strings in newsletter.lang that were used outside of newsletters were moved to main.lang

We will remove the old newsletter.lang from svn only once bedrock will run the new code and will no longer include newsletter.lang by default for all pages.

--- a/bedrock/newsletter/templates/newsletter/base.html
+++ b/bedrock/newsletter/templates/newsletter/base.html
@@ -1,6 +1,7 @@
 {% extends 'base-resp.html' %}
 
 {# Base template for newsletter pages #}
+{% set_lang_files "mozorg/newsletters" %}
 
 {% block page_title %}{{ _('Newsletter Subscriptions') }}{% endblock page_title %}
 
