--- a/bedrock/newsletter/templates/newsletter/existing.html
+++ b/bedrock/newsletter/templates/newsletter/existing.html
@@ -1,5 +1,7 @@
 {% extends 'newsletter/base.html' %}
 
+{% set_lang_files "mozorg/newsletters" %}
+
 {# Template used for a user to manage their subscriptions #}
 
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
