--- a/bedrock/newsletter/templates/newsletter/mozilla-and-you.html
+++ b/bedrock/newsletter/templates/newsletter/mozilla-and-you.html
@@ -1,5 +1,7 @@
 {% extends 'newsletter/one_newsletter_signup.html' %}
 
+{% set_lang_files "mozorg/newsletters" %}
+
 {% set newsletter_title = _('Mozilla Newsletter') %}
 {% set newsletter_id = 'mozilla-and-you' %}
 
