--- a/bedrock/newsletter/templates/newsletter/one_newsletter_signup.html
+++ b/bedrock/newsletter/templates/newsletter/one_newsletter_signup.html
@@ -1,4 +1,7 @@
 {% extends 'base-resp.html' %}
+
+{% set_lang_files "mozorg/newsletters" %}
+
 {#
  Base template for pages used to signup for one particular newsletter.
 
