--- a/bedrock/newsletter/templates/newsletter/confirm.html
+++ b/bedrock/newsletter/templates/newsletter/confirm.html
@@ -1,5 +1,7 @@
 {% extends 'newsletter/base.html' %}
 
+{% set_lang_files "mozorg/newsletters" %}
+
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {% block body_id %}newsletter-confirm{% endblock body_id %}
