--- a/bedrock/newsletter/templates/newsletter/includes/form.html
+++ b/bedrock/newsletter/templates/newsletter/includes/form.html
@@ -2,6 +2,8 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
+{% set_lang_files "mozorg/newsletters" %}
+
 {% from "newsletter/includes/macros.html" import email_form_thankyou with context %}
 
 {% if not success %}
