--- a/bedrock/newsletter/templates/newsletter/includes/macros.html
+++ b/bedrock/newsletter/templates/newsletter/includes/macros.html
@@ -2,6 +2,8 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
+{% set_lang_files "mozorg/newsletters" %}
+
 {% macro email_form_thankyou() %}
   <h3>{{ _('Thanks! Please check your inbox to confirm your subscription.') }}</h3>
   <p>
