--- a/bedrock/newsletter/templates/newsletter/ios.html
+++ b/bedrock/newsletter/templates/newsletter/ios.html
@@ -4,6 +4,8 @@
 
 {% extends "firefox/base-resp.html" %}
 
+{% set_lang_files "mozorg/newsletters" %}
+
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{ _('Firefox on iOS — Sign up for email updates — Mozilla') }}{% endblock %}
 {% block page_desc %}{{ _('Sign up today to receive email updates about the iOS version of Firefox.') }}{% endblock %}
