--- a/bedrock/newsletter/templates/newsletter/updated.html
+++ b/bedrock/newsletter/templates/newsletter/updated.html
@@ -1,5 +1,7 @@
 {% extends 'newsletter/base.html' %}
 
+{% set_lang_files "mozorg/newsletters" %}
+
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {% block body_id %}newsletter-updated{% endblock body_id %}
@@ -65,7 +67,7 @@
       </div>
       <div class="sub-feature" id="about">
         <h4>{{ _('About us') }}</h4>
-        <p>{{ _('What’s  Mozilla all about?') }}</p>
+        <p>{{ _('What’s Mozilla all about?') }}</p>
         <a href="{{ url('mozorg.about') }}" class="link">{{ _('We’re glad you asked!') }}</a>
       </div>
 
