[fix bug 1186605] Audit LESS & JS bundles.

--- a/bedrock/base/templates/base-resp.html
+++ b/bedrock/base/templates/base-resp.html
@@ -163,7 +163,7 @@
     <![endif]-->
 
     {% block site_js %}
-      {% javascript 'common-resp' %}
+      {% javascript 'common' %}
     {% endblock %}
     {% block js %}{% endblock %}
     {% if settings.DEV %}
