--- a/bedrock/firefox/templates/firefox/android/sms-base.html
+++ b/bedrock/firefox/templates/firefox/android/sms-base.html
@@ -9,7 +9,7 @@
 
 {% block body_id %}mobile-sms{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_sms' %}
 {% endblock %}
 
