--- a/bedrock/firefox/templates/firefox/channel.html
+++ b/bedrock/firefox/templates/firefox/channel.html
@@ -24,6 +24,7 @@
 
 {% block body_id %}channel{% endblock %}
 
+{% block site_css %}{% endblock %}
 {% block extrahead %}
   {% stylesheet 'firefox_channel' %}
 {% endblock %}
