--- a/bedrock/firefox/templates/firefox/desktop/customize.html
+++ b/bedrock/firefox/templates/firefox/desktop/customize.html
@@ -9,7 +9,7 @@
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{ _("Firefox — Customize and make it your own — The most flexible browser on the Web") }}{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_desktop_customize' %}
 {% endblock %}
 
