--- a/bedrock/firefox/templates/firefox/desktop/trust.html
+++ b/bedrock/firefox/templates/firefox/desktop/trust.html
@@ -9,7 +9,7 @@
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{ _("Firefox — Designed to protect your privacy — The most trusted browser on the Web") }}{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_desktop_trust' %}
 {% endblock %}
 
