--- a/bedrock/firefox/templates/firefox/new.html
+++ b/bedrock/firefox/templates/firefox/new.html
@@ -227,6 +227,6 @@
   {% include 'firefox/includes/simple_footer.html' %}
 {% endblock %}
 
-{% block site_js %}
+{% block js %}
   {% javascript 'firefox_new' %}
 {% endblock %}
