--- a/bedrock/firefox/templates/firefox/whatsnew-fx37.html
+++ b/bedrock/firefox/templates/firefox/whatsnew-fx37.html
@@ -40,7 +40,7 @@
   </a></h2>
 {% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_whatsnew_37' %}
 {% endblock %}
 
