--- a/bedrock/firefox/templates/firefox/whatsnew_38/whatsnew-video.html
+++ b/bedrock/firefox/templates/firefox/whatsnew_38/whatsnew-video.html
@@ -6,7 +6,7 @@
 
 {% add_lang_files "firefox/whatsnew_38" %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_whatsnew_38_video' %}
 {% endblock %}
 
