--- a/bedrock/foundation/templates/foundation/annualreport/2011.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2011.html
@@ -17,7 +17,7 @@
 
 {% block js %}
   <!--[if IE 9]>
-    {% javascript 'annual_2011_ie9' %}
+    {% javascript 'matchmedia_addlistener' %}
   <![endif]-->
   {% javascript 'annual_2011' %}
 {% endblock %}
