--- a/bedrock/mozorg/templates/mozorg/about/manifesto.html
+++ b/bedrock/mozorg/templates/mozorg/about/manifesto.html
@@ -335,7 +335,7 @@
 
 {% block js %}
   <!--[if IE 9]>
-    {% javascript 'manifesto_ie9' %}
+    {% javascript 'matchmedia_addlistener' %}
   <![endif]-->
   {% javascript 'mosaic' %}
   {% javascript 'manifesto' %}
