--- a/bedrock/mozorg/templates/mozorg/contentservices/base.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/base.html
@@ -16,8 +16,8 @@
     (url('mozorg.contentservices.about'),  _('About Content Services')),
 ] -%}
 
-{% block extrahead %}
-    {% stylesheet 'about-base' %}
+{% block page_css %}
+  {% stylesheet 'about-base' %}
 {% endblock %}
 
 {% block content %}
