--- a/bedrock/mozorg/templates/mozorg/contentservices/faq.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/faq.html
@@ -8,6 +8,7 @@
 {% block body_id %}contentservices-faq{% endblock %}
 
 {% block page_css %}
+  {{ super() }}
   {% stylesheet 'contentservices' %}
 {% endblock %}
 
