--- a/bedrock/newsletter/templates/newsletter/ios.html
+++ b/bedrock/newsletter/templates/newsletter/ios.html
@@ -11,8 +11,7 @@
 {% block page_desc %}{{ _('Sign up today to receive email updates about the iOS version of Firefox.') }}{% endblock %}
 {% block body_id %}newsletter-ios{% endblock %}
 
-{% block site_css %}{% endblock %}
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'newsletter_ios' %}
 {% endblock %}
 
