--- a/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
@@ -10,7 +10,7 @@
   </nav>
 {% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {{ super() }}
   {% stylesheet 'security-bug-bounty-hall-of-fame' %}
 {% endblock %}
