--- a/bedrock/styleguide/templates/styleguide/docs/send-to-device.html
+++ b/bedrock/styleguide/templates/styleguide/docs/send-to-device.html
@@ -11,9 +11,7 @@
 {% block page_title %}{{ _('Send to Device widget example') }}{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block site_css %}{% endblock %}
-
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'styleguide-docs-send-to-device' %}
 {% endblock %}
 
