--- a/bedrock/firefox/templates/firefox/desktop/fast.html
+++ b/bedrock/firefox/templates/firefox/desktop/fast.html
@@ -9,7 +9,7 @@
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{ _('Firefox — The "speed king" - The fastest browser on the Web') }}{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_desktop_fast' %}
 {% endblock %}
 
