--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -15,7 +15,7 @@
 {% block body_id %}firefox-hello{% endblock %}
 {% block body_class %}{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_hello' %}
 {% endblock %}
 
