--- a/bedrock/mozorg/templates/mozorg/contentservices/start.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/start.html
@@ -9,6 +9,7 @@
 {% block body_class %}sand{% endblock %}
 
 {% block page_css %}
+  {{ super () }}
   {% stylesheet 'contentservices' %}
 {% endblock %}
 
