--- a/bedrock/mozorg/templates/mozorg/powered-by.html
+++ b/bedrock/mozorg/templates/mozorg/powered-by.html
@@ -1,3 +1,7 @@
+{# This Source Code Form is subject to the terms of the Mozilla Public
+ # License, v. 2.0. If a copy of the MPL was not distributed with this
+ # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
+
 {% extends "base-resp.html" %}
 
 {% block page_title %}Powered by Mozilla {% endblock %}
@@ -5,7 +9,7 @@
 {% block body_id %}powered-by{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'powered-by' %}
 {% endblock %}
 
