--- a/bedrock/thunderbird/templates/thunderbird/index.html
+++ b/bedrock/thunderbird/templates/thunderbird/index.html
@@ -15,9 +15,7 @@
   <h2>{{ high_res_img('thunderbird/landing/wordmark.png', {'alt': _('Thunderbird'), 'width': '304', 'height': '84'}) }}</h2>
 {% endblock %}
 
-{% block site_css %}{% endblock %}
-
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'thunderbird-landing' %}
 {% endblock %}
 
@@ -78,8 +76,4 @@
 
 {% block site_footer %}
   {% include 'thunderbird/includes/simple-footer.html' %}
-{% endblock %}
-
-{% block site_js %}
-  {% javascript 'thunderbird-landing' %}
 {% endblock %}
