Fix Bug 1175199, update webmaker styleguide page to reference new logo

--- a/bedrock/styleguide/templates/styleguide/identity/webmaker-branding.html
+++ b/bedrock/styleguide/templates/styleguide/identity/webmaker-branding.html
@@ -27,23 +27,23 @@
     <li>use our logos to, or in connection with, content that disparages us or sullies our reputation</li>
   </ul>
   <div class="guidelines-logo">
-    <img src="{{ static('img/styleguide/identity/webmaker/logo.png') }}" alt="Logo" />
+    {{ high_res_img('styleguide/identity/webmaker/logo.png', {'alt': 'Logo', 'width': '266', 'height': '259'}) }}
     <h3>Download</h3>
     <ul class="button-list">
-      <li><a href="https://assets.mozilla.org/portal/assets/#asset/76" class="button-sand">EPS</a></li>
-      <li><a href="https://assets.mozilla.org/portal/assets/#asset/77" class="button-sand">JPG (300dpi)</a></li>
-      <li><a href="https://assets.mozilla.org/portal/assets/#asset/78" class="button-sand">PNG</a></li>
+      <li><a href="https://assets.mozilla.org/portal/assets/#asset/5232" class="button-sand">EPS</a></li>
+      <li><a href="https://assets.mozilla.org/portal/assets/#asset/5231" class="button-sand">JPG (300dpi)</a></li>
+      <li><a href="https://assets.mozilla.org/portal/assets/#asset/5230" class="button-sand">PNG</a></li>
     </ul>
   </div>
   <p class="copyright-note"><small>The logo files containing our trademarks are available under the following copyright licenses: vector logo files under <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY 3.0</a> or later; bitmap logo files under <a href="{{ url('mozorg.mpl.2.0.index') }}">MPL 2</a>.</small></p>
 </section>
 <section id="usage">
   <h2>Usage</h2>
-  <div><img src="{{ static('img/styleguide/identity/webmaker/usage-logo-wordmark.png') }}" alt="Usage Wordmark" /></div>
+  <div>{{ high_res_img('styleguide/identity/webmaker/usage-logo-wordmark.png', {'alt': 'Usage Wordmark', 'width': '222', 'height': '66'}) }}</div>
   <p>Our standard lockup for representing Webmaker. In most cases, use this.</p>
-  <div><img src="{{ static('img/styleguide/identity/webmaker/usage-logo.png') }}" alt="Usage Logo" /></div>
+  <div>{{ high_res_img('styleguide/identity/webmaker/usage-logo.png', {'alt': 'Usage Logo', 'width': '148', 'height': '151'}) }}</div>
   <p>The logo on its own. You can safely use this if Mozilla and Webmaker are clearly visible or well established elsewhere on the page or in the design.</p>
-  <div class="clear"><img src="{{ static('img/styleguide/identity/webmaker/usage-logo-bw.png') }}" alt="Usage Logo" /></div>
+  <div class="clear">{{ high_res_img('styleguide/identity/webmaker/usage-logo-bw.png', {'alt': 'Usage Logo', 'width': '81', 'height': '79'}) }}</div>
   <p>The one-color glyph can be used to represent Webmaker when a full color logo is not an option.</p>
 </section>
 <section id="wordmark">
@@ -53,8 +53,8 @@
   </div>
   <div class="logo">
     <img src="{{ static('img/styleguide/box-arrow-left.png') }}" alt="" class="box-arrow" />
-    <img src="{{ static('img/styleguide/identity/webmaker/wordmark-logo.png') }}" alt="Logo" />
-    <img src="{{ static('img/styleguide/identity/webmaker/wordmark.png') }}" alt="Logo" />
+    {{ high_res_img('styleguide/identity/webmaker/wordmark-logo.png', {'alt': 'Logo', 'width': '440', 'height': '140'}) }}
+    {{ high_res_img('styleguide/identity/webmaker/wordmark.png', {'alt': 'Logo', 'width': '440', 'height': '140'}) }}
   </div>
   <div class="download">
     <h4>Download</h4>
