adding web bounty hall of fame page

--- a/bedrock/security/templates/security/base.html
+++ b/bedrock/security/templates/security/base.html
@@ -14,6 +14,7 @@
     (url('security.known-vulnerabilities'), 'known-vulnerabilities', 'Known Vulnerabilities'),
     (url('security.bug-bounty'), 'bug-bounty', 'Bug Bounty'),
     (url('security.bug-bounty.hall-of-fame'), 'hall-of-fame', 'Firefox Hall Of Fame'),
+    (url('security.bug-bounty.web-hall-of-fame'), 'web-hall-of-fame', 'Mozilla Web and Services Hall Of Fame'),
     ('https://blog.mozilla.com/security/', 'blog', 'Security Blog'),
 ] %}
 
